<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Marvel Cinematic Universe</string>
    <string name="film_1">Captain America: The First Avenger</string>
    <string name="film_2">Captain Marvel</string>
    <string name="film_3">The Incredible Hulk</string>
    <string name="film_4">Iron Man</string>
    <string name="film_5">Iron Man 2</string>
    <string name="film_6">Thor</string>
    <string name="film_7">The Avengers</string>
    <string name="film_8">Iron Man 3</string>
    <string name="film_9">Thor: The Dark World</string>
    <string name="film_10">Captain America: The Winter Soldier</string>
    <string name="film_11">Guardians of the Galaxy</string>
    <string name="film_12">Guardians of the Galaxy Vol. 2</string>
    <string name="film_13">Avengers: Age of Ultron</string>
    <string name="film_14">Ant-man</string>
    <string name="film_15">Captain America: Civil War</string>
    <string name="film_16">Black Panther</string>
    <string name="film_17">Black Widow</string>
    <string name="film_18">Spider-man: Homecoming</string>
    <string name="film_19">Doctor Strange</string>
    <string name="film_20">Thor: Ragnarok</string>
    <string name="film_21">Ant-Man and The Wasp</string>
    <string name="film_22">Avengers: Infinity War</string>
    <string name="film_23">Avengers: Endgame</string>
    <string name="film_24">The Eternals</string>
    <string name="film_25">Spider-Man: Far From Home </string>
    <string name="film_26">Shang-Chi and the Legend of the Ten Rings </string>
    <string name="film_27">Spider-Man: No Way Home </string>
    <string name="film_28">Doctor Strange in the Multiverse of Madness </string>
    <string name="film_29">Thor: Love and Thunder </string>
    <string name="film_30">Black Panther: Wakanda Forever</string>
    <string name="tahun2008">2008</string>
    <string name="tahun2009">2009</string>
    <string name="tahun2010">2010</string>
    <string name="tahun2011">2011</string>
    <string name="tahun2012">2012</string>
    <string name="tahun2013">2013</string>
    <string name="tahun2014">2014</string>
    <string name="tahun2015">2015</string>
    <string name="tahun2016">2016</string>
    <string name="tahun2017">2017</string>
    <string name="tahun2018">2018</string>
    <string name="tahun2019">2019</string>
    <string name="tahun2020">2020</string>
    <string name="tahun2021">2021</string>
    <string name="tahun2022">2022</string>
    <string name="r69">6.9/10</string>
    <string name="r68">6.8/10</string>
    <string name="r67">6.7/10</string>
    <string name="r66">6.6/10</string>
    <string name="r65">6.7/10</string>
    <string name="r64">6.4/10</string>
    <string name="r63">6.3/10</string>
    <string name="r62">6.2/10</string>
    <string name="r61">6.1/10</string>
    <string name="r60">6.0/10</string>
    <string name="r79">7.9/10</string>
    <string name="r78">7.8/10</string>
    <string name="r77">7.7/10</string>
    <string name="r76">7.6/10</string>
    <string name="r75">7.7/10</string>
    <string name="r74">7.4/10</string>
    <string name="r73">7.3/10</string>
    <string name="r72">7.2/10</string>
    <string name="r71">7.1/10</string>
    <string name="r70">7.0/10</string>
    <string name="r89">8.9/10</string>
    <string name="r88">8.8/10</string>
    <string name="r87">8.7/10</string>
    <string name="r86">8.6/10</string>
    <string name="r85">8.7/10</string>
    <string name="r84">8.4/10</string>
    <string name="r83">8.3/10</string>
    <string name="r82">8.2/10</string>
    <string name="r81">8.1/10</string>
    <string name="r80">8.0/10</string>
    <string name="s1">Joe Johnston</string>
    <string name="s2">Anna Boden, Ryan Fleck</string>
    <string name="s3">Louis Leterrier</string>
    <string name="s4">Jon Favreau</string>
    <string name="s5">Kenneth Branagh</string>
    <string name="s6">Joss Whedon</string>
    <string name="s7">Shane Black</string>
    <string name="s8">Alan Taylor</string>
    <string name="s9">Anthony Russo, Joe Russo</string>
    <string name="s10">James Gunn</string>
    <string name="s11">Peyton Reed</string>
    <string name="s12">Ryan Coogler</string>
    <string name="s13">Cate Shortland</string>
    <string name="s14">Scott Derrickson</string>
    <string name="s15">Taika Waititi</string>
    <string name="s16">Chloé Zhao</string>
    <string name="s17">Jon Watts</string>
    <string name="s18">Destin Daniel Cretton</string>
    <string name="s19">Sam Raimi</string>
    <string name="s20">Kevin Feige, Brad Winderbaum</string>
    <string name="syn_1">Saat itu tahun 1942, Amerika telah memasuki Perang Dunia II, dan Steve Rogers yang sakit-sakitan tetapi bertekad frustrasi karena ditolak lagi untuk dinas militer. Semuanya berubah ketika Dr. Erskine merekrutnya untuk Proyek Rahasia Kelahiran Kembali. Membuktikan keberanian, kecerdasan, dan hati nuraninya yang luar biasa, Rogers menjalani percobaan dan tubuhnya yang lemah tiba-tiba ditingkatkan menjadi potensi maksimal manusia. Saat Dr. Erskine kemudian langsung dibunuh oleh agen departemen penelitian HYDRA rahasia Jerman Nazi (dipimpin oleh Johann Schmidt, alias Tengkorak Merah), Rogers dibiarkan sebagai pria unik yang awalnya disalahgunakan sebagai maskot propaganda; namun, ketika rekan-rekannya membutuhkannya, Rogers melanjutkan petualangan sukses yang benar-benar menjadikannya Kapten Amerika, dan perangnya melawan Schmidt dimulai.</string>
    <string name="syn_2">Setelah menabrakkan pesawat eksperimental, pilot Angkatan Udara Carol Danvers ditemukan oleh Kree dan dilatih sebagai anggota elit Militer Starforce di bawah komando mentornya Yon-Rogg. Enam tahun kemudian, setelah melarikan diri ke Bumi saat diserang oleh Skrulls, Danvers mulai menemukan lebih banyak masa lalunya. Dengan bantuan dari agen SHIELD Nick Fury, mereka berangkat untuk mengungkap kebenaran.</string>
    <string name="syn_3">Menggambarkan peristiwa setelah Bom Gamma. The Incredible Hulk bercerita tentang Dr Bruce Banner, yang mencari obat untuk kondisi uniknya, yang menyebabkan dia berubah menjadi monster hijau raksasa di bawah tekanan emosional. Sementara dalam pelarian dari militer yang mencari penangkapannya, Banner hampir sembuh. Tapi semuanya hilang saat makhluk baru muncul: The Abomination.</string>
    <string name="syn_4">Tony Stark. Jenius, miliarder, playboy, dermawan. Putra penemu legendaris dan kontraktor senjata Howard Stark. Ketika Tony Stark ditugaskan untuk memberikan presentasi senjata ke unit Irak yang dipimpin oleh Letnan Kolonel James Rhodes, dia diberi tumpangan di garis musuh. Perjalanan itu berakhir buruk ketika Starks Humvee yang dia tumpangi diserang oleh pejuang musuh. Dia bertahan - nyaris - dengan peti penuh pecahan peluru dan aki mobil terpasang di jantungnya. Untuk bertahan hidup, dia menemukan cara untuk mengecilkan baterai dan mengetahui bahwa baterai dapat memberi daya pada sesuatu yang lain. Maka lahirlah Iron Man. Dia menggunakan perangkat primitif untuk melarikan diri dari gua di Irak. Begitu kembali ke rumah, dia kemudian mulai bekerja untuk menyempurnakan setelan Iron Man. Tapi orang yang bertanggung jawab atas Stark Industries memiliki rencananya sendiri untuk mengambil alih Tony.</string>
    <string name="syn_5">Dengan dunia yang kini menyadari kehidupan gandanya sebagai pahlawan super lapis baja Iron Man, penemu miliarder Tony Stark menghadapi tekanan dari pemerintah, pers, dan publik untuk berbagi teknologinya dengan militer. Tidak mau melepaskan penemuannya, Stark, bersama dengan Pepper Potts, dan James "Rhodey" Rhodes di sisinya, harus menjalin aliansi baru - dan menghadapi musuh yang kuat.</string>
    <string name="syn_6">Prajurit Thor (Chris Hemsworth) diusir dari alam Asgard yang fantastis oleh ayahnya Odin (Sir Anthony Hopkins) karena kesombongannya dan dikirim ke Bumi untuk hidup di antara manusia. Jatuh cinta dengan ilmuwan Jane Foster (Natalie Portman) mengajarkan pelajaran yang sangat dibutuhkan Thor, dan kekuatan barunya muncul saat penjahat dari tanah airnya mengirimkan kekuatan gelap ke Bumi.</string>
    <string name="syn_7">Loki, saudara angkat Thor, bekerja sama dengan Tentara Chitauri dan menggunakan kekuatan Tesseract untuk melakukan perjalanan dari Asgard ke Midgard untuk merencanakan invasi ke Bumi dan menjadi raja. Direktur agensi SHIELD, Nick Fury, memulai proyek Avengers, bergabung dengan Tony Stark alias Iron Man; Steve Rogers, alias Kapten Amerika; Bruce Banner, alias The Hulk; Thor; Natasha Romanoff, alias Black Widow; dan Clint Barton, alias Hawkeye, untuk menyelamatkan dunia dari Loki yang kuat dan invasi alien.</string>
    <string name="syn_8" >Marvels "Iron Man 3" mengadu industrialis Tony Stark/Iron Man yang kurang ajar tapi brilian melawan musuh yang jangkauannya tidak mengenal batas. Ketika Stark menemukan dunia pribadinya hancur di tangan musuhnya, dia memulai pencarian yang mengerikan untuk menemukan mereka yang bertanggung jawab. Perjalanan ini, di setiap belokan, akan menguji keberaniannya. Dengan punggung menempel ke dinding, Stark dibiarkan bertahan hidup dengan caranya sendiri, mengandalkan kecerdikan dan instingnya untuk melindungi orang-orang terdekatnya. Saat dia berjuang kembali, Stark menemukan jawaban atas pertanyaan yang diam-diam menghantuinya: apakah pria itu yang membuat jas atau jas yang membuat pria itu?</string>
    <string name="syn_9">Ribuan tahun yang lalu, ras makhluk yang dikenal sebagai Dark Elf mencoba mengirim alam semesta ke dalam kegelapan dengan menggunakan senjata yang dikenal sebagai Aether. Prajurit dari Asgard menghentikan mereka, tetapi pemimpin mereka Malekith (Christopher Eccleston) melarikan diri untuk menunggu kesempatan lain. Para prajurit menemukan Aether, dan karena tidak dapat dihancurkan, mereka mencoba menyembunyikannya. Saat ini, Jane Foster (Natalie Portman) menunggu kembalinya Thor (Chris Hemsworth), meski sudah dua tahun sejak terakhir kali mereka bertemu. Sementara itu, Thor telah berusaha untuk membawa perdamaian ke sembilan alam. Jane menemukan anomali yang mirip dengan yang membawa Thor ke Bumi. Dia pergi untuk menyelidiki, menemukan lubang cacing, dan tersedot ke dalamnya. Kembali ke Asgard, Thor ingin kembali ke Bumi, tetapi ayahnya, Odin (Sir Anthony Hopkins), menolak untuk mengizinkannya. Thor belajar dari Heimdall (Idris Elba), yang dapat melihat ke semua alam, bahwa Jane menghilang. Thor kemudian kembali ke Bumi tepat saat Jane muncul kembali. Namun, ketika beberapa Polisi mencoba menangkapnya, energi tak dikenal mengusir mereka. Thor kemudian membawa Jane ke Asgard untuk mencari tahu apa yang terjadi padanya. Ketika energi dilepaskan lagi, mereka menemukan bahwa ketika Jane menghilang, dia berpapasan dengan Aether dan memasuki dirinya. Malekith, setelah merasakan bahwa waktu untuk menyerang adalah sekarang, mencari Aether. Dia menyerang Asgard dan ibu Thor Frigga (Rene Russo) terbunuh melindungi Jane. Odin ingin menahan Jane di Asgard agar Malekith datang. Thor tidak setuju dengan rencananya, jadi dengan pengikutnya, dia memutuskan untuk membawa Jane pergi. Dia meminta bantuan saudaranya, Loki (Tom Hiddleston). Sayangnya, motivasi Loki masih belum diketahui.</string>
    <string name="syn_27">Identitas rahasia Peter Parker terungkap ke seluruh dunia. Putus asa meminta bantuan, Peter beralih ke Doctor Strange untuk membuat dunia lupa bahwa dia adalah Spider-Man. Mantra itu menjadi sangat salah dan menghancurkan multiverse, membawa penjahat mengerikan yang bisa menghancurkan dunia.</string>
</resources>