<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.Film27"
    android:background="@color/SecondColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/MainColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="Detail Film"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo_mcu_detail_black"
            android:scaleType="centerCrop"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/helper"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/helper"
                android:orientation="vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/film_27"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Year"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/tahun2021"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Rating"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/r83"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Directed By"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/s17"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_for_synopsis">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/syn_27"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginStart="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/film_27"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="410dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/shape_for_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="Synopsis"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>